[gd_scene load_steps=86 format=2]

[ext_resource path="res://assets/Actors/Goblin/Attack3.png" type="Texture" id=1]
[ext_resource path="res://assets/Actors/Goblin/Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/Actors/Goblin/Bomb_sprite.png" type="Texture" id=3]
[ext_resource path="res://assets/Actors/Goblin/Run.png" type="Texture" id=4]
[ext_resource path="res://assets/Actors/Goblin/Attack.png" type="Texture" id=5]
[ext_resource path="res://assets/Actors/Goblin/Death.png" type="Texture" id=6]
[ext_resource path="res://assets/Actors/Goblin/Take Hit.png" type="Texture" id=7]
[ext_resource path="res://assets/Actors/Goblin/Attack2.png" type="Texture" id=8]
[ext_resource path="res://scripts/states_goblin.gd" type="Script" id=9]
[ext_resource path="res://scripts/idle_goblin.gd" type="Script" id=10]
[ext_resource path="res://scripts/Goblin.gd" type="Script" id=11]
[ext_resource path="res://scripts/run_goblin.gd" type="Script" id=12]
[ext_resource path="res://scripts/close_attack_goblin.gd" type="Script" id=13]
[ext_resource path="res://scripts/dead_goblin.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 16.542 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1350, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1650, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "close_attack",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "ranged_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "close_attack2",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1800, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=70]
animations = [ {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 12.5194, 18.2385 )

[node name="Goblin" type="KinematicBody2D" groups=[
"Enemy",
]]
position = Vector2( -0.700073, -0.247681 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.43475, 9.36442 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 50 )
animation = "idle"
frame = 1
playing = true

[node name="Bomb" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 70 )
frame = 10

[node name="current_state" type="Label" parent="."]
margin_left = -14.9867
margin_top = -38.6388
margin_right = 25.0133
margin_bottom = -24.6388
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2( 0, 9.562 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 200 )
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2( 0, 9.749 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 200 )
collide_with_areas = true
collide_with_bodies = false

[node name="RightDownRay" type="RayCast2D" parent="."]
position = Vector2( 15.0945, 9.60315 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 4

[node name="LeftDownRay" type="RayCast2D" parent="."]
position = Vector2( -15.9528, 10.3969 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 4

[node name="states" type="Node" parent="."]
script = ExtResource( 9 )

[node name="idle" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 14 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 12 )

[node name="close_attack" type="Node" parent="states"]
script = ExtResource( 13 )

[node name="ranged_attack" type="Node" parent="states"]

[node name="EnemyArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
position = Vector2( 0, 9.92126 )
shape = SubResource( 71 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="EnemyArea" to="." method="_on_Area2D_body_entered"]
